tweaked H3 spacing, fixed full width images on latest post

--- a/src/post.css
+++ b/src/post.css
@@ -9,7 +9,7 @@
         @apply text-xl text-03 font-normal mt-8 mb-4 max-w-md
     }
     & h3 {
-        @apply text-04 block uppercase font-semibold text-base mt-8 mb-2 max-w-md
+        @apply text-04 block uppercase font-semibold text-base mt-6 mb-2 max-w-md
     }
     & blockquote {
         @apply border-l-4 pl-4 text-03 italic my-6;
@@ -223,7 +223,7 @@
             @apply mt-12 mb-8
         }
         & h3 {
-            @apply mt-4 mb-8
+            @apply mt-8 mb-6
         }
         & blockquote {
             @apply -ml-6 pl-6 my-8;
@@ -267,7 +267,7 @@
             @apply text-2xl;
         }
         & h3 {
-            @apply mb-12;
+            @apply mb-8 mt-10;
         }
         & blockquote {
             @apply -ml-8 pl-8 my-12;
